# php_books_database

./: .gitattributes  .gitignore  100_day.php  LICENSE  README.md  add.php  add_entry.php  backup_db  books.css  booksdb.sql  db_header.php  db_header.php.example  footer.php  header.php  index.php  location_option.php  report.php  report_table.php  report_table_header.php  year_rank.php
js_reports/: add_book.html  add_book_estimate.html  add_date_pages.html  add_read.html  add_tags.html  base.js  book.html  book_scripts.js  books_detail.html  books_read_by_year.html  books_read_by_year_scripts.js  carousel.html  colors.css  index.html  index_scripts.js  inventory.html  progress.html  table-style.css  update_read_notes.html  update_read_notes_scripts.js
style/: books.css  carousel.css  colors.css  table-style.css
tools/: Makefile  README.md  bookDBTool.py  book_reports.ipynb  booksdb.sql  booktool.py  configuration.json  pyproject.toml  schema_booksdb.sql
tools/Apache/: sites-enabled_000-weewx.conf
tools/book_estimates/: 109_east_palace.txt  atlas_of_ai.txt  atomic-bomb.txt  command-control.txt  dark_matter-blake_crouch.txt  factory_girls-chang.txt  games_agency_as_art_--_nguyen.txt  physical_intelligence.txt  recovering-eng.txt  river_of_the_gods-millard.txt  streets_of_gold-ran_abramitzky_et_al.txt  the_idea_factory_bell_labs.txt  the_premonition-michael_lewis.txt
tools/book_service/: .coverage  .envrc  Dockerfile  README.md  deployment.yaml  ingress.yaml  pyproject.toml
tools/book_service/books/: Dockerfile  README.md  api.ini  api.key  api.py  api_util.py  books_util.py  docker-compose.yml  isbn_com.py
tools/book_service/booksdb/: api_util.py
tools/book_service/booksmcp/: Dockerfile  README.md  __init__.py  docker-compose.yml  requirements.txt  server.py
tools/book_service/config/: api.key  configuration.json  configuration_example.json
tools/book_service/example_json_payloads/: test_update_book_note_status.json  test_update_edit_read_note.json  test_update_read_dates.json
tools/book_service/examples/: test_add_book.json  test_add_books.json  test_update_book.json  test_update_book_note_status.json  test_update_read_date.json
tools/book_service/test_books/: generate_curl_commands.py  sql_cleanup_script.sql  test_api_util.py  test_booksmcp.py  test_docker_api.py
tools/bookdbtool/: README.md  ai_tools.py  book_db_tools.py  estimate_tools.py  isbn_lookup_tools.py  manual.py  repl_tools.py  tools.py  visualization_tools.py  visualizations.py
tools/html/: base.js  book.html  book_scripts.js  books_read_by_year.html  books_read_by_year_scripts.js  index.html  index_scripts.js  progress.html  table-style.css  update_read_notes.html  update_read_notes_scripts.js
tools/isbn_com/: api.py  isbn_com.py
tools/isbndb.com/: pyproject.toml
tools/isbndb.com/config/: config.json
tools/notebooks/: book_reports.ipynb
tools/test/: README.md  __init__.py  test_ai_tools.py  test_book_db_tools.py  test_estimate_tools.py  test_isbn_lookup_tools.py  test_visualization_tools.py
