[tool.poetry]
name = "php-book-database-python-tools"
version = "0.1.0"
description = ""
authors = ["Scott Hendrickson <scott@drskippy.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
pymysql = "^0.9.3"
pyspellchecker = "^0.5.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
matplotlib = "^3.1"
seaborn = "^0.9.0"
pandas = "^0.25.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
