[tool.poetry]
name = "php-book-database-python-tools"
version = "0.1.0"
description = ""
authors = ["Scott Hendrickson <scott@drskippy.net>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.22"
pymysql = "^0.9.3"
pyspellchecker = "^0.5.3"
matplotlib = "^3.2.1"
columnar = "^1.4.1"
pyreadline3 = "^3.4.1"
pandas = "^2.3.3"
ollama = "^0.6.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
matplotlib = "^3.1"
seaborn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
