[tool.poetry]
name = "php-book-database-python-tools"
version = "0.1.0"
description = ""
authors = ["Scott Hendrickson <scott@drskippy.net>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.22"
pymysql = "^0.9.3"
pyspellchecker = "^0.5.3"
matplotlib = "^3.2.1"
columnar = "^1.4.1"
pyreadline3 = "^3.4.1"
pandas = "^2.3.3"
ollama = "^0.6.1"
blinker = "^1.9.0"
certifi = "^2025.11.12"
cffi = "^2.0.0"
charset-normalizer = "^3.4.4"
click = "^8.3.1"
colorama = "^0.4.6"
contourpy = "^1.3.3"
cryptography = "^46.0.3"
cycler = "^0.12.1"
flask-cors = "^6.0.2"
flask = "^3.1.2"
fonttools = "^4.61.1"
idna = "^3.11"
importlib-metadata = "^8.7.1"
importlib-resources = "^6.5.2"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.6"
kiwisolver = "^1.4.9"
markupsafe = "^3.0.3"
numpy = "^2.4.0"
packaging = "^25.0"
pillow = "^12.1.0"
pycparser = "^2.23"
pyparsing = "^3.3.1"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
six = "^1.17.0"
tzdata = "^2025.3"
urllib3 = "^2.6.2"
uwsgi = "^2.0.31"
werkzeug = "^3.1.4"
zipp = "^3.23.0"
pytest = "^9.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0"
matplotlib = "^3.1"
seaborn = "^0.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
