[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["Scott Hendrickson <scott@drskippy.net>"]

[tool.poetry.dependencies]
python = "3.8.12"
Flask = "^2.0.3"
requests = "^2.27.1"
PyMySQL = "^1.0.2"
uWSGI = "^2.0.20"
pandas = "^1.4.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
